# vidbot

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml
tests/: __init__.py  test_vidbot.py
vidbot/: __init__.py
