[tool.poetry]
name = "vidbot"
version = "0.1.0"
description = ""
authors = ["Vivi <vivithecanine@gmail.com>"]
license = "EUPL-1.2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
python-telegram-bot = "^13.11"
python-dotenv = "^0.19.2"
yt-dlp = "^2022.2.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
# flakeheaven = "^0.11.1"
# mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true

[tool.black]
line-length = 88

# [tool.flakeheaven]
# exclude = ["README.md"]
# format = "colored"
# max_line_length = 88
# show_source = true

# [tool.flakeheaven.plugins]
# flake8-bandit = ["+*", "-S322"]
# flake8-bugbear = ["+*"]
# flake8-builtins = ["+*"]
# flake8-comprehensions = ["+*"]
# flake8-darglint = ["+*"]
# flake8-docstrings = ["+*"]
# flake8-eradicate = ["+*"]
# flake8-isort = ["+*"]
# flake8-mutable = ["+*"]
# flake8-pytest-style = ["+*"]
# flake8-spellcheck = ["+*"]
# mccabe = ["+*"]
# pep8-naming = ["+*"]
# pycodestyle = ["+*"]
# pyflakes = ["+*"]
# pylint = ["+*"]

# [tool.mypy]
# python_version = 3.10
# files = ['vidbot/*.py', 'tests/*.py']
# mypy_path = ['bin']
